--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
     margin: 0;
     font-size: 18px;
-    font-family: 'Playfair Display', serif;
-    /* font-family: "Whitney SSm A", "Whitney SSm B", "Avenir", "Segoe UI", "Ubuntu", "Helvetica Neue", Helvetica, Arial, sans-serif; */
+    font-family: 'Playfair Display', serif;    
     color: #4a4a4a;
-    /* background-color: rgb(97, 148, 211); */
-    background-color: #e3e6f3;
+    background-image: url("natural-ingredients-to-hyd.jpg");
+    background-size: cover;
+    backdrop-filter: blur(5px);    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,9 +18,10 @@ body {
 form {    
     width: 350x;
     position: relative;
-    background-color: #1c4108;
-    padding: 100px;
-    border-radius: 4px;
+    background-color: #6e8641;
+    padding: 70px;
+    border-radius: 15px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 
 }
 
@@ -53,7 +54,6 @@ form h2{
 input{
     
     font-family: 'Playfair Display', serif;
-    /* font-family: inherit; */
     width: 100%;
     outline: none;
     background-color: #fff;
