--- a/css/productstyle.css
+++ b/css/productstyle.css
@@ -1,5 +1,4 @@
 body{
-    
     font-family: 'Playfair Display', serif; 
     display:grid;
     grid-template-columns: 100%;
@@ -11,7 +10,6 @@ body{
     margin-left:auto;
     margin-right:auto;
     width:1470px;
-    
 }
 
 #header{
@@ -23,15 +21,12 @@ body{
     background-color: #e3e6f3;
     box-shadow: 0px 5px 15px rgb(0, 0, 0,0.06);
     font-family: 'Playfair Display', serif;
+    min-height: 50px;
 }
 #header h1{
-    /* width: 212px;
-    height: 39px; */
     font-style: normal;
     font-weight: bold;
     font-size: 32px;
-    /* line-height: 39px; */
-    /* identical to box height */
 
     color: #000000;
     float:left;
@@ -53,10 +48,6 @@ body{
     text-align: right;
     padding-top:20px;
     padding-left: 550px; 
-    /* position: absolute;
-    right: 0; */
-     
-    
 }
 
 #navbar li{
@@ -107,36 +98,19 @@ body{
     width: 100%;
     padding:20px;
     padding-left: 90px;
+    margin-top: 60px;
+    min-height: 70vh;
 }
 
 .gallery > div{
-    /* border:1px solid black;
-    min-height : 100px;
-    flex:none;
-    width:calc(20% - 1.75rem); */
     border:none;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     min-height : 100px;
     max-height: 500px;
-    
-  }
+}
 
 .content{
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    gap: 10px;
-    width: 266px;
-    height: 381px;
-    border-radius: 10px; */
-
-    /* Inside auto layout */
-    /* flex: none;
-    order: 0;
-    flex-grow: 0; */
     display: grid;
     grid-template-rows: 66% 34%;
     row-gap: 1px;
@@ -144,14 +118,12 @@ body{
     justify-content: center;
     padding-bottom: 10px;
     font-family: 'Playfair Display', serif;
-    
-
 }
 
 .content img {
     grid-row:1;
     width: 300px;
-    height: auto;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
